--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -44,7 +44,7 @@ library(tidyverse)
 library(tidymodels)
 library(gridExtra)
 
-sacramento <- read_csv('data/sacramento.csv')
+sacramento <- read_csv("data/sacramento.csv")
 head(sacramento)
 ```
 
@@ -61,7 +61,7 @@ eda <- ggplot(sacramento, aes(x = sqft, y = price)) +
   geom_point(alpha = 0.4) +
   xlab("House size (square footage)") +
   ylab("Price (USD)") +
-  scale_y_continuous(labels = dollar_format()) 
+  scale_y_continuous(labels = dollar_format())
 eda
 ```
 
@@ -105,8 +105,8 @@ small_plot <- ggplot(small_sacramento, aes(x = sqft, y = price)) +
   geom_point() +
   xlab("House size (square footage)") +
   ylab("Price (USD)") +
-  scale_y_continuous(labels=dollar_format()) +
-  geom_vline(xintercept = 2000, linetype = "dotted") 
+  scale_y_continuous(labels = dollar_format()) +
+  geom_vline(xintercept = 2000, linetype = "dotted")
 small_plot
 ```
 
@@ -116,9 +116,9 @@ price should be. For the example above, we find and label the 5 nearest
 neighbours to our observation of a house that is 2000 square feet:
 
 ```{r 07-find-k3}
-nearest_neighbours <- small_sacramento %>% 
-  mutate(diff = abs(2000 - sqft)) %>% 
-  arrange(diff) %>% 
+nearest_neighbours <- small_sacramento %>%
+  mutate(diff = abs(2000 - sqft)) %>%
+  arrange(diff) %>%
   head(5)
 nearest_neighbours
 ```
@@ -126,8 +126,10 @@ nearest_neighbours
 ```{r 07-knn3-example, echo = FALSE, fig.height = 4, fig.width = 5}
 nearest_neighbours <- mutate(nearest_neighbours, twothou = rep(2000, 5))
 nn_plot <- small_plot +
-             geom_segment(data = nearest_neighbours, 
-                          aes(x = twothou, xend = sqft, y = price, yend = price), color = "orange")
+  geom_segment(
+    data = nearest_neighbours,
+    aes(x = twothou, xend = sqft, y = price, yend = price), color = "orange"
+  )
 nn_plot
 ```
 
@@ -137,14 +139,14 @@ selling price for the new home.  Specifically, we can take the mean (or
 average) of these 5 values as our predicted value.
 
 ```{r 07-predicted-knn}
-prediction <- nearest_neighbours %>% 
+prediction <- nearest_neighbours %>%
   summarise(predicted = mean(price))
 prediction
 ```
 
 ```{r 07-predictedViz-knn, echo = FALSE, fig.height = 4, fig.width = 5}
 nn_plot +
-  geom_point(aes(x = 2000, y = prediction[[1]]), color = "red", size = 2.5) 
+  geom_point(aes(x = 2000, y = prediction[[1]]), color = "red", size = 2.5)
 ```
 
 Our predicted price is \$`r format(round(prediction[[1]]), scientific = FALSE)`
@@ -219,18 +221,18 @@ of different scales.
 
 ```{r 07-choose-k-knn}
 sacr_recipe <- recipe(price ~ sqft, data = sacramento_train) %>%
-                  step_scale(all_predictors()) %>%
-                  step_center(all_predictors())
+  step_scale(all_predictors()) %>%
+  step_center(all_predictors())
 
 sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = tune()) %>%
-                  set_engine("kknn") %>%
-                  set_mode("regression")
+  set_engine("kknn") %>%
+  set_mode("regression")
 
 sacr_vfold <- vfold_cv(sacramento_train, v = 5, strata = price)
 
 sacr_wkflw <- workflow() %>%
-                 add_recipe(sacr_recipe) %>%
-                 add_model(sacr_spec)
+  add_recipe(sacr_recipe) %>%
+  add_model(sacr_spec)
 sacr_wkflw
 ```
 The major difference you can see in the above workflow compared to previous
@@ -242,11 +244,11 @@ the model and returns the RMSPE for each number of neighbours.
 
 ```{r 07-choose-k-knn-results}
 
-gridvals <- tibble(neighbors = seq(1,200))
+gridvals <- tibble(neighbors = seq(1, 200))
 
 sacr_results <- sacr_wkflw %>%
-                   tune_grid(resamples = sacr_vfold, grid = gridvals) %>%
-                   collect_metrics() 
+  tune_grid(resamples = sacr_vfold, grid = gridvals) %>%
+  collect_metrics()
 
 # show all the results
 sacr_results
@@ -255,8 +257,8 @@ We take the *minimum* RMSPE to find the best setting for the number of neighbour
 ```{r 07-choose-k-knn-results-2}
 # show only the row of minimum RMSPE
 sacr_min <- sacr_results %>%
-               filter(.metric == 'rmse') %>%
-               filter(mean == min(mean))
+  filter(.metric == "rmse") %>%
+  filter(mean == min(mean))
 sacr_min
 ```
 Here we can see that the smallest RMSPE occurs when $K =$ `r sacr_min %>% pull(neighbors)`.
@@ -267,12 +269,12 @@ to be too small or too large, we cause the RMSPE to increase:
 
 ```{r 07-choose-k-knn-plot, echo = FALSE, fig.height = 4, fig.width = 5} 
 sacr_results <- sacr_results %>%
-                   filter(.metric == 'rmse')
+  filter(.metric == "rmse")
 
 sacr_tunek_plot <- ggplot(sacr_results, aes(x = neighbors, y = mean)) +
   geom_point() +
   geom_line() +
-  labs(x = 'Neighbours', y = 'RMSPE')
+  labs(x = "Neighbours", y = "RMSPE")
 
 sacr_tunek_plot
 ```
@@ -286,34 +288,33 @@ predicted prices as a blue line:
 
 ```{r 07-howK, echo = FALSE, fig.height = 12, fig.width = 10}
 kmin <- sacr_min %>% pull(neighbors)
-gridvals <-  c(1, 3, kmin, 41, 250, 450)
+gridvals <- c(1, 3, kmin, 41, 250, 450)
 
 plots <- list()
 
 for (i in 1:6) {
+  sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = gridvals[[i]]) %>%
+    set_engine("kknn") %>%
+    set_mode("regression")
 
-      sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = gridvals[[i]]) %>%
-                  set_engine("kknn") %>%
-                  set_mode("regression")
+  sacr_wkflw <- workflow() %>%
+    add_recipe(sacr_recipe) %>%
+    add_model(sacr_spec)
 
-      sacr_wkflw <- workflow() %>%
-                 add_recipe(sacr_recipe) %>%
-                 add_model(sacr_spec)
+  sacr_preds <- sacr_wkflw %>%
+    fit(data = sacramento_train) %>%
+    predict(sacramento_train) %>%
+    bind_cols(sacramento_train)
 
-      sacr_preds <- sacr_wkflw %>%
-         fit(data = sacramento_train) %>%
-         predict(sacramento_train) %>%
-         bind_cols(sacramento_train)
-    
-      plots[[i]] <- ggplot(sacr_preds, aes(x = sqft, y = price)) +
-                  geom_point(alpha = 0.4) +
-                  xlab("House size (square footage)") +
-                  ylab("Price (USD)") +
-                  scale_y_continuous(labels = dollar_format())  +
-                  geom_line(data = sacr_preds, aes(x = sqft, y = .pred), color = "blue") +
-                  ggtitle(paste0("K = ", gridvals[[i]]))
+  plots[[i]] <- ggplot(sacr_preds, aes(x = sqft, y = price)) +
+    geom_point(alpha = 0.4) +
+    xlab("House size (square footage)") +
+    ylab("Price (USD)") +
+    scale_y_continuous(labels = dollar_format()) +
+    geom_line(data = sacr_preds, aes(x = sqft, y = .pred), color = "blue") +
+    ggtitle(paste0("K = ", gridvals[[i]]))
 }
-grid.arrange(grobs = plots, ncol=2)
+grid.arrange(grobs = plots, ncol = 2)
 ```
 
 Based on the plots above, we see that when $K$ = 1, the blue line runs perfectly
@@ -375,18 +376,18 @@ function knows to output a quality summary related to regression, and not, say, 
 set.seed(1234)
 kmin <- sacr_min %>% pull(neighbors)
 sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = kmin) %>%
-            set_engine("kknn") %>%
-            set_mode("regression")
+  set_engine("kknn") %>%
+  set_mode("regression")
 
 sacr_fit <- workflow() %>%
-           add_recipe(sacr_recipe) %>%
-           add_model(sacr_spec) %>%
-           fit(data = sacramento_train)
+  add_recipe(sacr_recipe) %>%
+  add_model(sacr_spec) %>%
+  fit(data = sacramento_train)
 
-sacr_summary <- sacr_fit %>% 
-           predict(sacramento_test) %>%
-           bind_cols(sacramento_test) %>%
-           metrics(truth = price, estimate = .pred) 
+sacr_summary <- sacr_fit %>%
+  predict(sacramento_test) %>%
+  bind_cols(sacramento_test) %>%
+  metrics(truth = price, estimate = .pred)
 
 sacr_summary
 ```
@@ -414,16 +415,16 @@ along with the code that generated it:
 ```{r 07-predict-all, fig.height = 4, fig.width = 5}
 set.seed(1234)
 sacr_preds <- sacr_fit %>%
-                predict(sacramento_train) %>%
-                bind_cols(sacramento_train)
+  predict(sacramento_train) %>%
+  bind_cols(sacramento_train)
 
 plot_final <- ggplot(sacr_preds, aes(x = sqft, y = price)) +
-            geom_point(alpha = 0.4) +
-            xlab("House size (square footage)") +
-            ylab("Price (USD)") +
-            scale_y_continuous(labels = dollar_format())  +
-            geom_line(data = sacr_preds, aes(x = sqft, y = .pred), color = "blue") +
-            ggtitle(paste0("K = ", kmin))
+  geom_point(alpha = 0.4) +
+  xlab("House size (square footage)") +
+  ylab("Price (USD)") +
+  scale_y_continuous(labels = dollar_format()) +
+  geom_line(data = sacr_preds, aes(x = sqft, y = .pred), color = "blue") +
+  ggtitle(paste0("K = ", kmin))
 
 plot_final
 ```
@@ -467,8 +468,8 @@ we are interested in using in our analyses:
 
 ```{r 07-ggpairs, fig.height = 5, fig.width = 6}
 library(GGally)
-plot_pairs <- sacramento %>% 
-  select(price, sqft, beds) %>% 
+plot_pairs <- sacramento %>%
+  select(price, sqft, beds) %>%
   ggpairs()
 plot_pairs
 ```
@@ -480,24 +481,24 @@ we use the formula `price ~ sqft + beds` to denote that we have two predictors,
 and set `neighbors = tune()` to tell `tidymodels` to tune the number of neighbours for us.
 ```{r 07-mult-setup}
 sacr_recipe <- recipe(price ~ sqft + beds, data = sacramento_train) %>%
-                  step_scale(all_predictors()) %>%
-                  step_center(all_predictors())
+  step_scale(all_predictors()) %>%
+  step_center(all_predictors())
 
 sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = tune()) %>%
-                  set_engine("kknn") %>%
-                  set_mode("regression")
+  set_engine("kknn") %>%
+  set_mode("regression")
 ```
 Next, we'll use 5-fold cross-validation to choose the number of neighbours via the minimum RMSPE:
 ```{r 07-mult-cv}
-gridvals <- tibble(neighbors = seq(1,200))
+gridvals <- tibble(neighbors = seq(1, 200))
 sacr_k <- workflow() %>%
-                 add_recipe(sacr_recipe) %>%
-                 add_model(sacr_spec) %>%
-                 tune_grid(sacr_vfold, grid = gridvals) %>%
-                 collect_metrics() %>%
-                 filter(.metric == 'rmse') %>%
-                 filter(mean == min(mean)) %>%
-                 pull(neighbors)
+  add_recipe(sacr_recipe) %>%
+  add_model(sacr_spec) %>%
+  tune_grid(sacr_vfold, grid = gridvals) %>%
+  collect_metrics() %>%
+  filter(.metric == "rmse") %>%
+  filter(mean == min(mean)) %>%
+  pull(neighbors)
 sacr_k
 ```
 Here we see that the smallest RMSPE occurs when $K =$ `r sacr_k`.
@@ -507,19 +508,19 @@ training data set, and after that we can use that model to predict
 on the test data to get our test error. 
 ```{r 07-re-train}
 sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = sacr_k) %>%
-                  set_engine("kknn") %>%
-                  set_mode("regression")
+  set_engine("kknn") %>%
+  set_mode("regression")
 
 knn_mult_fit <- workflow() %>%
-                add_recipe(sacr_recipe) %>%
-                add_model(sacr_spec) %>%
-                fit(data = sacramento_train)
+  add_recipe(sacr_recipe) %>%
+  add_model(sacr_spec) %>%
+  fit(data = sacramento_train)
 
 knn_mult_preds <- knn_mult_fit %>%
-                predict(sacramento_test) %>%
-                bind_cols(sacramento_test)
+  predict(sacramento_test) %>%
+  bind_cols(sacramento_test)
 
-knn_mult_mets <- metrics(knn_mult_preds, truth = price, estimate = .pred) 
+knn_mult_mets <- metrics(knn_mult_preds, truth = price, estimate = .pred)
 knn_mult_mets
 ```
 This time when we performed K-NN regression on the same data set, but also
@@ -541,24 +542,30 @@ xvals <- seq(from = min(sacramento_train$sqft), to = max(sacramento_train$sqft),
 yvals <- seq(from = min(sacramento_train$beds), to = max(sacramento_train$beds), length = 50)
 
 zvals <- knn_mult_fit %>%
-                predict(crossing(xvals, yvals) %>% mutate(sqft = xvals, beds = yvals)) %>%
-                pull(.pred)
+  predict(crossing(xvals, yvals) %>% mutate(sqft = xvals, beds = yvals)) %>%
+  pull(.pred)
 
-zvalsm <- matrix(zvals, nrow=length(xvals))
+zvalsm <- matrix(zvals, nrow = length(xvals))
 
-plot_ly() %>% 
-  add_markers(data = sacramento_train,
-        x = ~sqft, 
-        y = ~beds,
-        z = ~price, 
-        marker = list(size = 5, opacity = 0.4, color = "red")) %>% 
-   layout(scene = list(xaxis = list(title = 'House size (square feet)'), 
-                     zaxis = list(title = 'Price (USD)'),
-                     yaxis = list(title = 'Number of bedrooms'))) %>%
-  add_surface(x = ~xvals, 
-              y = ~yvals,
-              z = ~zvalsm,
-              colorbar=list(title='Price (USD)')) 
+plot_ly() %>%
+  add_markers(
+    data = sacramento_train,
+    x = ~sqft,
+    y = ~beds,
+    z = ~price,
+    marker = list(size = 5, opacity = 0.4, color = "red")
+  ) %>%
+  layout(scene = list(
+    xaxis = list(title = "House size (square feet)"),
+    zaxis = list(title = "Price (USD)"),
+    yaxis = list(title = "Number of bedrooms")
+  )) %>%
+  add_surface(
+    x = ~xvals,
+    y = ~yvals,
+    z = ~zvalsm,
+    colorbar = list(title = "Price (USD)")
+  )
 ```
 
 We can see that the predictions in this case, where we have 2 predictors, form
